<resources>
    <string name="app_name">Kita Sehat</string>
    <string name="desc_proning">Teknik proning dilakukan dengan berbaring tengkurap. Ini adalah posisi yang diterima secara medis untuk meningkatkan saturasi oksigen. Teknik ini bermanfaat pada pasien COVID-19 dengan atau tanpa pemakaian ventilator. Jika kadar oksigen pasien turun di bawah 94 persen, pasien bisa berbaring tengkurap. Posisi ini meningkatkan ventilasi dan memungkinkan pernapasan yang nyaman. </string>
    <string name="howto_proning">Bagaimana cara melakukan teknik proning saat isolasi mandiri di rumah? Untuk tengkurap, pengidap membutuhkan lima bantal dan permukaan datar untuk berbarik. Satu batal di letakkan di bawah leher, satu atau dua bantal diletakkan di bawah dada hingga paha atas dan dua bantal di bawah tulang kering.
    </string>
    <string name="howto2_proning">Pastikan untuk mengubah posisi berbaring setiap 30 menit dari posisi tengkurang menjadi berbaring di setiap sisi dan kemudian duduk sebelum kembali ke posisi pertama (berbaring tengkurap).</string>
    <string name="proning_suggestion">Ada beberapa hal yang harus diperhatikan saat melakukan teknik proning: \n
Hindari tengkurap selama satu jam setelah makan.
        \n
Pertahankan proning hanya sebanyak yang bisa ditoleransi dengan mudah.
        \n
Seseorang diperbolehkan tengkurap hingga 16 jam sehari, dalam beberapa siklus, jika merasa nyaman.
        \n
Bantal bisa disesuaikan sedikit untuk mengubah area tekanan dan untuk kenyamanan.
        \n
Pantau setiap luka tekan atau cedera, terutama di sekitar tonjolan tulang.
        \n
</string>
    <string name="prevention_proning">
        Seseorang harus menghindari teknik proning jika:

Sedang hamil.
Trombosis vena dalam (diobati dalam waktu kurang dari 48 jam).
Memiliki masalah jantung.
Fraktur tulang belakang, tulang paha, atau panggung yang tidak stabil.

    </string>
    <string name="title_activity_province">Province</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="temukan_jenis_vaksin">Temukan Jenis Vaksin</string>
    <string name="total_vaksinasi_petugas_publik">Total Vaksinasi Petugas Publik</string>
    <string name="total_vaksinasi_sdmk">Total Vaksinasi SDMK</string>
    <string name="data_updated">Data Updated:</string>
    <string name="total_vaksinasi_lansia">Total Vaksinasi Lansia</string>
    <string name="total_vaksinasi">Total Vaksinasi</string>
    <string name="data_vaksinasi_covid_19">Data Vaksinasi COVID-19</string>
    <string name="no">NO</string>
    <string name="nama_negara">Nama Negara</string>
    <string name="positif">Positif +</string>
    <string name="negatif">Negatif -</string>
    <string name="bed_tersedia">Bed Tersedia :</string>
    <string name="bed_kosong">Bed Kosong :</string>
    <string name="antrian">Antrian :</string>
    <string name="data_diupdate_puku_12">data diupdate puku 12</string>
    <string name="lokasi_rumah_sakit">Lokasi Rumah Sakit</string>
    <string name="kasur_tersedia">Kasur Tersedia</string>
    <string name="jumlah_antrian">Jumlah Antrian</string>
    <string name="alamat">Alamat :</string>
    <string name="wilayah">Wilayah</string>
    <string name="no_hp">No HP :</string>
    <string name="provinsi">Provinsi :</string>
    <string name="kasus_positif_yang_terjadi_sekarang">Kasus Positif yang terjadi Sekarang</string>
    <string name="kasus_yand_sembuh">Kasus yand Sembuh</string>
    <string name="kasus_yand_meninggal">Kasus yand Meninggal</string>
    <string name="kota_bed_kosong_covid_19">Kota Bed Kosong Covid-19</string>
    <string name="kota_bed_kosong_non_covid_19">Kota Bed Kosong NON-COVID-19</string>
    <string name="rumah_sakit_covid_19">Rumah Sakit (Covid -19)</string>
    <string name="detail_kamar_covid_19">Detail Kamar (Covid -19)</string>
    <string name="kosong">-</string>
    <string name="rumah_sakit_non_covid_19">Rumah Sakit (NON-Covid -19)</string>
    <string name="detail_kamar_non_covid_19">Detail Kamar (Non-Covid -19)</string>
    <string name="data_rs_rujukan_covid_19">Data RS Rujukan COVID-19</string>
    <string name="teknik_proning">Teknik Proning</string>
    <string name="teknik_proning_tengkurap">Teknik Proning (Tengkurap)</string>
    <string name="provinsi_covid_19">Provinsi (Covid-19)</string>
    <string name="provinsi_bed_kosong_non_covid">Provinsi Bed Kosong Non Covid</string>
    <string name="penyebaran_corona_di_provinsi">Penyebaran Corona di Provinsi</string>
    <string name="share_apps">Share Apps</string>
    <string name="lisensi_dan_dokumentasi">Lisensi dan Dokumentasi</string>
    <string name="meninggal">Meninggal</string>
    <string name="desc_global">Data kasus virus Corona (COVID-19) yang terjadi di seluruh dunia, yang disajikan secara Realtime</string>
    <string name="title_global">Data Kasus Corona Global</string>
    <string name="desc_bed_noncorona">Anda dapat menggunakan Data API Bed kosong utnuk mencari bed kosong di daerah Rumah sakit anda</string>
    <string name="title_bed_noncorona">Data Bed Kosong Di Rumah Sakit Non Corona</string>
    <string name="lisensi">Lisensi</string>
    <string name="desc_telp_darurat">Apabila dalam keadaan darurat hubungi (112) bebas pulsa</string>
    <string name="title_covid">Penyakit Corona (Covid-19)</string>
    <string name="desc_covid">Semua hal tentang Perkembangan dan Statistik dari Penyakit pandemi covid-19 yang terjadi di negara indonesia beserta indicatornya</string>
    <string name="terinfeksi">Terinfeksi</string>
    <string name="sembuh">Sembuh</string>
    <string name="dirawat">Dirawat</string>
    <string name="pencegahan_virus_covid_19">Pencegahan Virus COVID-19</string>
    <string name="desc_ikon1">Selalu Mencuci Tangan</string>
    <string name="desc_ikon2">Terapkan \nJaga Jarak</string>
    <string name="desc_ikon3">Selalu Menggunakan 2 Masker</string>
    <string name="title_rs">Penyebaran Corona di Setiap Provinsi</string>
    <string name="desc_rs">Cari Penyebaran Virus Corona COVID-19 di daerah anda secara realtime</string>
    <string name="title_rstujukan">Rs Rujukan</string>
    <string name="desc_rsprovinsi">Data-Data Rumah sakit rujukan penyakit COVID -19 di seluruh indonesia</string>
    <string name="data_vaksinasi">Data Vaksinasi</string>
    <string name="data_laju_perkembangan_vaksinasi_yang_ada_di_indonesia">Data laju perkembangan Vaksinasi yang ada di Indonesia</string>
    <string name="title_proning">Teknik Proning untuk Pernapasan</string>
    <string name="desc_proning_card">Cara yang Manjur dilakukan saat batas kadar udara maupun oksigen kurang dari 94%</string>
    <string name="penambahan">Penambahan</string>
    <string name="title_bed_corona">Data Bed Kosong Di Rumah Sakit</string>
    <string name="desc_bed_corona">Anda dapat menggunakan Data API Bed kosong utnuk mencari bed kosong di daerah Rumah sakit anda</string>
    <string name="title_jenisvaksin">Jenis Vaksin</string>
    <string name="platfrom_vaksin">Platfrom Vaksin :</string>
    <string name="jumlah_dosis_vaksin">Jumlah Dosis Vaksin :</string>
    <string name="jeda_pemberian">Jeda Pemberian :</string>
    <string name="efektivitas">Efektivitas :</string>
    <string name="efek_samping">Efek Samping :</string>
    <string name="jenis_vaksin">Jenis Vaksin</string>
</resources>