<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ProningActivity">


        <LinearLayout
            android:id="@+id/toolbarProning"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainColor"
            android:elevation="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBackProning"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@color/mainColor"
                android:src="@drawable/ic_baseline_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="Teknik Proning"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarProning">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarHospitals">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Teknik Proning (Tengkurap)"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbarHospitals" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/illustrasi_proning" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="6dp"
                    android:text="@string/desc_proning"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="6dp"
                    android:text="@string/howto_proning"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="6dp"
                    android:text="@string/howto2_proning"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="6dp"
                    android:text="@string/proning_suggestion"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:padding="6dp"
                    android:text="@string/prevention_proning"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>