<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/mainColor"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/avatarHospital"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_hospitalicon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvNameHospital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatarHospital"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAddressHospital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/alamat"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/tvRegionHospital"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatarHospital"
                app:layout_constraintTop_toBottomOf="@id/tvNameHospital" />

            <TextView
                android:id="@+id/tvRegionHospital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/wilayah"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatarHospital"
                app:layout_constraintTop_toBottomOf="@id/tvAddressHospital" />

            <TextView
                android:id="@+id/tvPhoneHospital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/no_hp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatarHospital"
                app:layout_constraintTop_toBottomOf="@id/tvRegionHospital" />

            <LinearLayout
                android:id="@+id/dividerHospitals"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatarHospital"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneHospital" />

            <TextView
                android:id="@+id/tvProvinceHospitals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/provinsi"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatarHospital"
                app:layout_constraintTop_toBottomOf="@id/dividerHospitals" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>